--- a/index.html
+++ b/index.html
@@ -745,7 +745,7 @@ function pastelColorFromString(str) {
         <div class="flex flex-col items-center">
             <div class="relative">
                 <img 
-                    src="${w.Foto && w.Foto !== '' ? w.Foto : 'img/default-foto.png'}" 
+                    src="${w.Foto && w.Foto !== '' ? w.Foto : 'https://raw.githubusercontent.com/puriagung2/warga/refs/heads/main/default-foto.png'}" 
                     class="w-28 h-28 object-cover rounded-2xl border shadow"
                 >
                 <div class="absolute -bottom-2 right-1 bg-indigo-500 text-white text-[10px] px-2 py-0.5 rounded-md shadow">
